# kose-kata

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  gradlew  libs.versions.toml  pyproject.toml  sample.env  settings.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/dev/kordex/gradle/: CreateDockerfileTask.kt  _Utils.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kose_kata/: __main__.py  client.py  db.py  log.py  var.py
migrations/: env.py
migrations/versions/: 9a2b5ce8bafc_initial.py
src/kose_kata/: __main__.py  database.py
src/kose_kata/extensions/: debug.py
src/main/kotlin/cafe/ferret/kose/: App.kt  CommandArguments.kt  _Utils.kt
src/main/kotlin/cafe/ferret/kose/database/: Database.kt  DatabaseSetup.kt  DbCollection.kt  Entity.kt  Migrations.kt
src/main/kotlin/cafe/ferret/kose/extensions/: CreationExtension.kt  DebugExtension.kt  ManagementExtension.kt  UtilityExtension.kt  ViewingExtension.kt
src/main/kotlin/cafe/ferret/kosekata/: App.kt  CommandArguments.kt  _Utils.kt
src/main/kotlin/cafe/ferret/kosekata/database/: Database.kt  DatabaseSetup.kt  DbCollection.kt  Entity.kt  Migrations.kt
src/main/kotlin/cafe/ferret/kosekata/extensions/: AliasExtension.kt  ChatCommandsExtension.kt  CreationExtension.kt  DebugExtension.kt  InfoExtension.kt  ManagementExtension.kt  UtilityExtension.kt  (+1 more)
src/main/resources/: logback.groovy  logback.xml
src/main/resources/translations/kose/: strings.properties
(+47 files in other folders)
