[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mazzie", email = "mazziechai@gmail.com"},
]
dependencies = [
    "hikari[speedups]>=2.0.0.dev121",
    "SQLAlchemy>=2.0.20",
    "uvloop>=0.17.0",
    "hikari-lightbulb>=2.3.3",
    "hikari-miru>=3.2.0",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = {text = "MPL-2.0"}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "isort>=5.12.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3

